RESOLVED FIXED59856
Plug-in failed to initialize message should be called when Java fails to initialize
https://bugs.webkit.org/show_bug.cgi?id=59856
Summary Plug-in failed to initialize message should be called when Java fails to init...
Steve Falkenburg
Reported 2011-04-29 18:06:31 PDT
Plug-in failed to initialize message should be called when Java fails to initialize
Attachments
Patch (1.96 KB, patch)
2011-04-29 18:16 PDT, Steve Falkenburg
mjs: review+
Steve Falkenburg
Comment 1 2011-04-29 18:16:50 PDT
Maciej Stachowiak
Comment 2 2011-04-30 03:05:42 PDT
Comment on attachment 91784 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=91784&action=review r=me > Source/WebKit2/WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:1257 > + const String mimeType = "application/x-java-applet"; I suggest naming this javaMimeType or appletMimeType or something like that.
Sam Weinig
Comment 3 2011-04-30 17:19:33 PDT
I don't understand this patch. This is not checking initialization, but rather whether a java plugin exists or not.
Steve Falkenburg
Comment 4 2011-04-30 19:15:23 PDT
Inside WebPage::createPlugin for the failure case, GetPluginPath succeeds, returning the proper path to the Java plug-in. The failure occurs when NetscapePluginModule::getOrCreate calls pluginModule->load() to initialize the plug-in. When this fails, getOrCreate returns 0, and then createPlugin returns 0. The Java applet path doesn't appear to use PluginView, so the call you added to DidFailToInitializePlugin in PluginView::initializePlugin doesn't get called in this case. I'd be open to fixing this another way - let me know.
Steve Falkenburg
Comment 5 2011-05-02 11:05:34 PDT
Note You need to log in before you can comment on or make changes to this bug.